Fix WebSocket connection